[gd_scene load_steps=2 format=2]

[ext_resource path="res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.gd" type="Script" id=1]

[node name="weapon_upgrade_tree" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="teir1" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -8.0
margin_right = 104.0
margin_bottom = 60.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 28 )

[node name="upgrade1T1" type="Button" parent="teir1"]
margin_right = 40.0
margin_bottom = 20.0
toggle_mode = true

[node name="upgrade2T1" type="Button" parent="teir1"]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0
toggle_mode = true

[node name="upgrade3T1" type="Button" parent="teir1"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 68.0
toggle_mode = true

[node name="teir2" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 288.0
margin_top = -7.99994
margin_right = 328.0
margin_bottom = 60.0001
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 28 )

[node name="upgrade1T2" type="Button" parent="teir2"]
margin_right = 40.0
margin_bottom = 20.0

[node name="upgrade2T2" type="Button" parent="teir2"]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0

[node name="upgrade3T2" type="Button" parent="teir2"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 68.0

[node name="teir3" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 576.0
margin_top = -8.0
margin_right = 616.0
margin_bottom = 60.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 28 )

[node name="upgrade1" type="Button" parent="teir3"]
margin_right = 40.0
margin_bottom = 20.0

[node name="upgrade2" type="Button" parent="teir3"]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0

[node name="upgrade3" type="Button" parent="teir3"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 68.0

[node name="teir4" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 832.0
margin_top = -8.0
margin_right = 872.0
margin_bottom = 60.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 28 )

[node name="upgrade1" type="Button" parent="teir4"]
margin_right = 40.0
margin_bottom = 20.0

[node name="upgrade2" type="Button" parent="teir4"]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0

[node name="upgrade3" type="Button" parent="teir4"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 68.0

[node name="teir5" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1056.0
margin_top = -7.99994
margin_right = 1096.0
margin_bottom = 60.0001
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 28 )

[node name="upgrade1" type="Button" parent="teir5"]
margin_right = 40.0
margin_bottom = 20.0

[node name="upgrade2" type="Button" parent="teir5"]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0

[node name="upgrade3" type="Button" parent="teir5"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 68.0

[connection signal="toggled" from="teir1/upgrade1T1" to="." method="_on_upgrade1T1_toggled"]
[connection signal="toggled" from="teir1/upgrade2T1" to="." method="_on_upgrade2T1_toggled"]
[connection signal="toggled" from="teir1/upgrade3T1" to="." method="_on_upgrade3T1_toggled"]
[connection signal="toggled" from="teir2/upgrade1T2" to="." method="_on_upgrade1T2_toggled"]
[connection signal="toggled" from="teir2/upgrade2T2" to="." method="_on_upgrade2T2_toggled"]
[connection signal="toggled" from="teir2/upgrade3T2" to="." method="_on_upgrade3T2_toggled"]
